2014-09-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Strip any suffix like 
	".info" from uses of filename in generated node contents.  Mark 
	node contents as an index.  Comment added mentioning problem 
	with character encodings.  Introductory text changed to be more 
	descriptive.

2014-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/doc.h (InfoCommand): Removed.  All uses updated.
	(FUNCTION_DOC): Comments added.

	* doc/info-stnd.texi (Miscellaneous Commands, Cursor Commands): Fix
	minor typos.

	* info/session.c (move_to_goal_column): New function, split from
	info_next_line and info_prev_line.  Interpret -1 as goal column to 
	mean the current column.
	(info_show_point): Don't set goal_column.
	(info_read_and_dispatch): Set goal_column to -1 unless previous 
	commmand was next-line or prev-line.
	(info_search_in_node_internal): Don't set goal_column.
	* info/window.c (window_set_node_of_window): Don't set goal_column.
	(window_make_window): Initialize goal_column to -1.

	* info/session.c (info_display_file_info): Display name of subfile if 
	in split file.

2014-09-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_dispatch_on_key): Don't set 
	ea_last_executed_command.
	(info_numeric_arg_digit_loop): Don't declare with 
	DECLARE_INFO_COMMAND.
	* info/echo-area.c (ea_last_executed_command): Declared static.
	(read_and_dispatch_in_echo_area): Set ea_last_executed_command.

2014-09-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_read_dispatch): Return pointer to function 
	implementing Info command instead of calling it.  All callers updated.

2014-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_select_reference): When following a reference
	in a footnotes window, try to switch to a window containing a node
	from the file.
	* info/display.c (display_update_window_1): Turn off standout mode